syntax = "proto3";

package edu.uci.ics.amber.engine.architecture.controller;

import "edu/uci/ics/amber/engine/architecture/sendsemantics/partitionings.proto";
import "edu/uci/ics/amber/engine/common/virtualidentity.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
};

service ControllerCallService {
  rpc AssignBreakpoint (AssignBreakpointRequest) returns (AssignBreakpointResponse);
  rpc EpochMarker (EpochMarkerRequest) returns (EpochMarkerResponse);
  rpc FatalError (FatalErrorEvent) returns (google.protobuf.Empty);
  rpc LinkWorkers (LinkWorkersRequest) returns (LinkWorkersResponse);
  rpc LinkCompleted (LinkCompletedEvent) returns (google.protobuf.Empty);
  rpc LocalBreakpointTriggered (LocalBreakpointTriggeredEvent) returns (google.protobuf.Empty);
  rpc LocalOperatorException (LocalOperatorExceptionEvent) returns (google.protobuf.Empty);
  rpc ModifyLogic (ModifyLogicRequest) returns (ModifyLogicResponse);
  rpc PythonConsoleMessage (PythonConsoleMessageEvent) returns (google.protobuf.Empty);
  rpc QueryWorkerStats (QueryWorkerStatsRequest) returns (QueryWorkerStatsResponse);
  rpc RegionsTimeSlotExpired (RegionsTimeSlotExpiredEvent) returns (google.protobuf.Empty);
  rpc SkewDetection (SkewDetectionRequest) returns (SkewDetectionResponse);
  rpc WorkerExecutionStarted (WorkerExecutionStartedEvent) returns (google.protobuf.Empty);
  rpc WorkerExecutionCompleted (WorkerExecutionCompletedEvent) returns(google.protobuf.Empty);
  rpc WorkerRpcCalls (WorkerRpcCallsRequest) returns (WorkerRpcCallsResponse);
}

message WorkerSet{
  repeated common.ActorVirtualIdentity worker = 1;
}

message RpcPayload{
  common.ActorVirtualIdentity worker_id = 1;
  google.protobuf.Any payload = 2;
}

message WorkerRpcCallsRequest{
  repeated RpcPayload call_collection = 1;
}

message WorkerRpcCallsResponse{
  repeated RpcPayload ret_collection = 1;
}

message LocalBreakpointTriggeredEvent {}

message LocalOperatorExceptionEvent {
  string message = 1;
}

message ModifyLogicRequest {}

message ModifyLogicResponse {}

message PythonConsoleMessageEvent {
  google.protobuf.Timestamp timestamp = 1  [(scalapb.field).no_box = true];
  string msg_type = 2;
  string source = 3;
  string message = 4;
}

message QueryWorkerStatsRequest {}

message QueryWorkerStatsResponse {}

message RegionsTimeSlotExpiredEvent {}

message SkewDetectionRequest {}

message SkewDetectionResponse {}

message WorkerExecutionStartedEvent {}

message FatalErrorEvent {}

message LinkWorkersRequest {}

message LinkWorkersResponse {}

message AssignBreakpointRequest {}

message AssignBreakpointResponse {}

message EpochMarkerRequest {}

message EpochMarkerResponse {}

message WorkerExecutionCompletedEvent {}

message LinkCompletedEvent {
  common.LinkIdentity link_id = 1 [(scalapb.field).no_box = true];
}

